* Updated Projects page with images and links

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -9,15 +9,26 @@
 	<div class = "projectBoxes">
         <div class= "container">
 
-		<h1>Projects</h1>
+			<div class="title">
+				<h1>Projects</h1>
+				<h5>Github: <a href="https://github.com/devlontecron">DevlonTecron</a></h5>
+			</div>
 
+
+
+		<div>
+            <h3>OpenRCT2</h3>
+            <p>Actively engaged and committing to an open source community focused around 2002 PC game "Roller Coaster Tycoon 2" by Chris Sawyer. Written in base C, this small but very active coding community supports frequent updates with bug fixes, new features such as online and touch interfaces, and porting code to other platforms such as Android or iOS. <a href="https://openrct2.org/">OpenRCT2</a> challenges me to uphold coding standards, communicating with others, code documentation and testing, and much more.  </p>
+		</div>
+		
         <div>
             <h3>Budget Parser</h3>
             <p>This was a quick, fun, python based project to complete two things: First, I wanted to get a good understanding of python and its syntax to build up the language skill. This project really showed me how quick python is to use and develop in but also revealed how annoying non-type casting programing can be. The second part of this project was an idea I've always had of being able to have persistent data without the use of a database server. The workaround for this was to use a local JSON file to update tagging and categorizing information which would be built up over time. This provided a perfect solution for quick, easy access to data that would could be called on in the future and by others, so long as they have the file, without the need of a server.</p>
         </div>
 
-		<div>
+		<div class="osv">
 			<h3>[Research] OSv Unikernel 2017</h3>
+			 <a href="../resources/OSvThesis-compressed.pdf"><img src="../resources/osvThumb.PNG"></a>
 			<p>I'm very fortunate to have had the opportunity to work with Dr. Wes Lloyd under the University of Washington on Uni-Kernel and OSv software deployed on the cloud. We measured the efficiency and cost of implementing a Kernel level application to a server using Amazon Web Services. This application approach is a brand-new type of software that lets an application act and work on the Kernel level. The idea is to let the application request and build the most bare-bones operating system and stand alone. This reduced boot times and increases efficiencies in time and space. OSv and Uni-Kernel have already been implemented and have shown their value in other areas of the industry. However, we examined the comparative cost difference between web services and how it impacted the application. </p>
 		</div>
 		<div>
@@ -25,8 +36,9 @@
 			<p>I took an "object art" class in my senior year of college and was given the task to create something that represented "emotion". Being the only CS major in the class, I wanted to showcase computers ability that can extend even into the arts. I 3D printed a mask which housed a microphone and raspberry pi device along with LEDs around the edge. Using python and Google AI APIs, I developed a system that given key words and phrases, the mask would change colors. This piece actually now hangs in my home near my smart speaker home device</p>
 			
 		</div>
-		<div>
+		<div class="hackalong">
 			<h3>Hackalong</h3>
+			<img src="../resources/hackAlong.png"></a>
 			<p>An android based application that allows users to browse, search, and follow hackathons happening nearby or around the country. Providing information like dates, times, themes, attendees and more. Users have profiles with "attributes" to suggest hackathons and people with similar interests to connect and collaborate. </p>
 			
 		</div>
