* updated accent color to Contact page

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -11,14 +11,14 @@
 
 			<div class="title">
 				<h1>Projects</h1>
-				<h5>Github: <a href="https://github.com/devlontecron">DevlonTecron</a></h5>
+				<h5>Github: <a href="https://github.com/devlontecron" target="_blank" >DevlonTecron</a></h5>
 			</div>
 
 
 
 		<div>
             <h3>OpenRCT2</h3>
-            <p>Actively engaged and committing to an open source community focused around 2002 PC game "Roller Coaster Tycoon 2" by Chris Sawyer. Written in base C, this small but very active coding community supports frequent updates with bug fixes, new features such as online and touch interfaces, and porting code to other platforms such as Android or iOS. <a href="https://openrct2.org/">OpenRCT2</a> challenges me to uphold coding standards, communicating with others, code documentation and testing, and much more.  </p>
+            <p>Actively engaged and committing to an open source community focused around 2002 PC game "Roller Coaster Tycoon 2" by Chris Sawyer. Written in base C, this small but very active coding community supports frequent updates with bug fixes, new features such as online and touch interfaces, and porting code to other platforms such as Android or iOS. <a href="https://openrct2.org/" target="_blank" >OpenRCT2</a> challenges me to uphold coding standards, communicating with others, code documentation and testing, and much more.  </p>
 		</div>
 		
         <div>
