Color scheme and home button

--- a/about/about.html
+++ b/about/about.html
@@ -3,7 +3,11 @@
     <body>
         <div class="background">
             <div class="container">
+        
+        <div class="title">
         <h1>About</h1>
+        <a href="devindurham.info"><img class= "home" src="../resources/homeIcon.png"></img></a>
+        </div>
         <div class='past'>
             <h2>Past</h2>
             <img src="../resources/profilePicSquare.jpeg"></img>
@@ -47,8 +51,8 @@
                     My answer to this question varies day by day and has shifted over the years. But the core sentiment of my answer has remained the same:
                 </p>
                 <img src="../resources/leader.jpg">   </img>
-                <p>
-                    <br>"I wake up every morning to empower others to go forward and change the world."                            
+                <p class="q">
+                    <br>"I wake up every morning to empower others to go and change the world."                            
                 </p>
                 
             </div>
