--- a/contact/contact.html
+++ b/contact/contact.html
@@ -8,7 +8,12 @@
 
 <div class = "contactBox">
     <div class="content">
+      <div class="title">
         <h1>Contact</h1>
+        <a href="../index.html"><img class= "home" src="../resources/homeIcon.png"></img></a>
+        </div>
+
+        <h1></h1>
         <h3>Freelancing</h3>
         <p>For Inquires about freelancing, please email me with the word "Freelance" in the subject.</p>
         <h3>Research / Collaborations</h3>
@@ -20,7 +25,7 @@
 <table>
     <tr>
         <td>Resume: </td>
-        <td> <a href="../resources/DevinDurhamResume.March.2019.pdf"> Last updated: MArch 2019 </a></td>
+        <td> <a href="../resources/DevinDurhamResume.March.2019.pdf"> Last updated: March 2019 </a></td>
       </tr>
   <tr>
     <td>Email: </td>
