--- a/media/media.html
+++ b/media/media.html
@@ -3,6 +3,12 @@
 <body>
     <div class="container">
         <div class="content">
+			<div class="title">
+				<h1>Media</h1>
+				<a href="../index.html"><img class= "home" src="../resources/homeIcon.png"></img></a>
+			</div>
+
+
                 <div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'OPEP2T-IKwRwR7sB8XWc'});Pixlee.addSimpleWidget({widgetId:'15816'});};</script><script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
                 
         </div>
