--- a/projects/projects.html
+++ b/projects/projects.html
@@ -9,9 +9,11 @@
 	<div class = "projectBoxes">
         <div class= "container">
 
+
 			<div class="title">
 				<h1>Projects</h1>
-				<h5>Github: <a href="https://github.com/devlontecron" target="_blank" >DevlonTecron</a></h5>
+				<a href="../index.html"><img class= "home" src="../resources/homeIcon.png"></img></a>
+				<br><br><h5>Github: <a href="https://github.com/devlontecron" target="_blank" >DevlonTecron</a></h5>	
 			</div>
 
 
@@ -39,7 +41,7 @@
 		<div class="hackalong">
 			<h3>Hackalong</h3>
 			<img src="../resources/hackAlong.png"></a>
-			<p>An android based application that allows users to browse, search, and follow hackathons happening nearby or around the country. Providing information like dates, times, themes, attendees and more. Users have profiles with "attributes" to suggest hackathons and people with similar interests to connect and collaborate. </p>
+			<p>An android based application that allows users to browse, search, and follow hackathons happening nearby or around the country. Providing information like dates, times, themes, attendees and more. Users have profiles with "attributes" to suggest hackathons and people with similar interests to connect and collaborate. Developed using Android Studio, my small three person group was able to build and deploy this app using public APIs, firebase database, and php backends. </p>
 			
 		</div>
 	
