removed nav bar import to fix nesting problem

--- a/about/about.html
+++ b/about/about.html
@@ -6,7 +6,7 @@
         
         <div class="title">
         <h1>About</h1>
-        <a href="devindurham.info"><img class= "home" src="../resources/homeIcon.png"></img></a>
+        <a href="../index.html"><img class= "home" src="../resources/homeIcon.png"></img></a>
         </div>
         <div class='past'>
             <h2>Past</h2>
