--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <link rel="stylesheet" href="index.css">
 <body>
        
-    <object type="text/html" data="navBar.html">
-    </object>
+    <div class= container>
+        <div class="center">
+            <h1>Devin Durham</h1>
+            <p>Empower each other<br>Change the world</p>
+        </div>
+        <a class="about" href="about/about.html">About</a>            
+        <a class="projects" href="projects/projects.html">Projects</a>
+        <a class="blog" href="blog/blog.html">Social Feed</a>    
+        <a class="media" href="media/media.html">Media</a>
+        <a class="contact" href="contact/contact.html">Contact</a>
+    </div>
 
 </body>
 </html>
