--- a/projects/projects.html
+++ b/projects/projects.html
@@ -11,7 +11,6 @@
 
 			<div class="title">
 				<h1>Projects</h1>
-				<a href="../index.html"><img class= "home" src="../resources/homeIcon.png"></img></a>
 				<br><br><h5>Github: <a href="https://github.com/devlontecron" target="_blank" >DevlonTecron</a></h5>	
 			</div>
 
@@ -29,7 +28,7 @@
 
 		<div class="osv">
 			<h3>[Research] OSv Unikernel 2017</h3>
-			 <a href="../resources/OSvThesis-compressed.pdf"><img src="../resources/osvThumb.PNG"></a>
+			 <a href="../resources/OSvThesis-compressed.pdf" target="_blank"><img src="../resources/osvThumb.PNG"></a>
 			<p>I'm very fortunate to have had the opportunity to work with Dr. Wes Lloyd under the University of Washington on Uni-Kernel and OSv software deployed on the cloud. We measured the efficiency and cost of implementing a Kernel level application to a server using Amazon Web Services. This application approach is a brand-new type of software that lets an application act and work on the Kernel level. The idea is to let the application request and build the most bare-bones operating system and stand alone. This reduced boot times and increases efficiencies in time and space. OSv and Uni-Kernel have already been implemented and have shown their value in other areas of the industry. However, we examined the comparative cost difference between web services and how it impacted the application. </p>
 		</div>
 		<div>
