Completed new UI updates

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <div class="accordion">
             <input type="radio" name="select" class="accordion-select" checked />
             <div class="accordion-title"><h2>Devin Durham</h2></div>
-            <div class="accordion-content">
-
+            <div class="accordion-content" id="welcome">
+                <div class="titlecard">
+                    <h2>Devin Durham<h2>
+                    <h3>Academic, Engineer, Scientist, Artist</h3>
+                </div>
             </div> 
             
             <input type="radio" name="select" class="accordion-select" />
