--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <body>    
         <div class="accordion">
             <input type="radio" name="select" class="accordion-select" checked />
-            <div class="accordion-title"><h2>Devin Durham</h2></div>
+            <div class="accordion-title"><h2>Welcome</h2></div>
             <div class="accordion-content" id="welcome">
                 <div class="titlecard">
                     <h2>Devin Durham<h2>
