integrating javascript for login and dynamic lists

--- a/holidaze/main.html
+++ b/holidaze/main.html
@@ -1,12 +1,13 @@
 <html>
     <link rel="stylesheet" href="main.css">
+    <script src="JS/helper.js"></script>
         
-    <body>    
+    <body onload="getTopPhrases()">    
 
         <div class="titleBar">
             <h1>Holidaze</h1>
             <div class="menu">
-                <input type="checkbox" name="select" class="menuCheck" checked/>
+                <input type="checkbox" name="select" class="menuCheck" />
                 <ul>
                     <li>About</li>
                     <li>Help</li>
