--- a/holidaze/login.html
+++ b/holidaze/login.html
@@ -1,14 +1,15 @@
 <html>
 <link rel="stylesheet" href="login.css">
+<script src="JS/helper.js"></script>
 
     <body>    
         <div class="container">
             <h1>Holidaze</h1>
 
             <div class="loginBox">
-                <form action="/action_page.php" method="get">
-                    First name: <input type="text" name="fname"><br>
-                    Last name: <input type="text" name="lname"><br>
+                <form action="javascript:saveName()" method="get">
+                    First name: <input type="text" id="fname"><br>
+                    Last name: <input type="text" id="lname"><br>
                     <input id="button" type="submit" value="Submit">
                   </form>
             </div>
