--- a/holidaze/login.html
+++ b/holidaze/login.html
@@ -1,11 +1,13 @@
-<html>
+<!DOCTYPE html>
 <link rel="stylesheet" href="login.css">
 <script src="JS/helper.js"></script>
 
-    <body>    
+
+    <body>   
+        
         <div class="container">
             <h1>Holidaze</h1>
-
+             
             <div class="loginBox">
                 <form action="javascript:saveName()" method="get">
                     First name: <input type="text" id="fname"><br>
@@ -18,6 +20,7 @@
 
 
     </body>
+
     <footer>
         <ul>
             <li>Contact</li>
