--- a/holidaze/main.html
+++ b/holidaze/main.html
@@ -21,7 +21,7 @@
         <div class="words">    
             <table id="phraseTable">
                 <tr>
-                    <th>Phrase</th>
+                    <th onclick="saveNewPhrase()">Phrase</th">
                     <th>Count</th>
                 </tr>
 
