New entry in projects

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -14,12 +14,17 @@
 				<br><br><h5>Github: <a href="https://github.com/devlontecron" target="_blank" >DevlonTecron</a></h5>	
 			</div>
 
-
+		<div class="holidaze">
+			<h3>Holidaze</h3>
+			<img src="../resources/holidazeSS.jpg"></a>
+			<p>From concept to completion, I smashed through 2 weeks to produce this quick and fun web application to track users and phrases for a family drinking game. Users log in with names and can add new phrases while scoring points by selecting what phrases or events have happened. I build 3 different Azure functions (GET login/validate, GET data, POST Phrases) along with a dynamic web application UI with a mobile first design. This project really proved to myself how quickly I’m able to pick up new tools and apply them when needed while also expanding on my skillset in the new era of cloud development. This also allowed me to compare and contrast Azure with AWS and I have to say I was very impressed with Azure’s ease of use. I would like to come back to this project and replicated it but using AWS Lambda functions. That being said, I do believe that these small cloud functions are the future of software development. I also wrote my functions in Python3, the third project I have chosen to use Python, which has solidified my opinions on the flexible, non-type casting, high level language: Python is great for data scientists and engineers who need a quick little function to run and process data at a local or non-production level environment. Beyond this, this project also reinvigorated my love for coding and demonstrated my passion to leverage my skills to help and build something for others.</p>
+			
+		</div>
 
 		<div>
             <h3>OpenRCT2</h3>
             <p>Actively engaged and committing to an open source community focused around 2002 PC game "Roller Coaster Tycoon 2" by Chris Sawyer. Written in base C, this small but very active coding community supports frequent updates with bug fixes, new features such as online and touch interfaces, and porting code to other platforms such as Android or iOS. <a href="https://openrct2.org/" target="_blank" >OpenRCT2</a> challenges me to uphold coding standards, communicating with others, code documentation and testing, and much more.  </p>
-		</div>
+		
 		
         <div>
             <h3>Budget Parser</h3>
