--- a/contact/contact.html
+++ b/contact/contact.html
@@ -24,7 +24,7 @@
 <table>
     <tr>
         <td>Resume: </td>
-        <td> <a href="../resources/DevinDurhamResume.Jan.2020.pdf"> Last updated: Jan 2020 </a></td>
+        <td> <a href="../resources/DevinDurhamResume.Jan.2020.pdf" target="_blank"> Last updated: Jan 2020 </a></td>
       </tr>
   <tr>
     <td>Email: </td>
