rewrote about page

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -48,10 +48,28 @@
   </tr>
 	
 </table>
-</div>
 
+<div class = citations>
+  <h3>Citations & Sources</h3>
+  <p>Background image: <a href="https://pexels.com" target="_blank">www.pexels.com</a> (multiple sources):<br>  
+    <ul>
+      <li>https://vod-progressive.akamaized.net/exp=1579654715~acl=%2A%2F722729098.mp4%2A~hmac=ba7c02f09d82878cf0f1afd281689eebc4a4c565de3e41f366c381996980102e/vimeo-prod-skyfire-std-us/01/2148/8/210741501/722729098.mp4?download=1&filename=Pexels+Videos+2629.mp4</li>
+      <li>https://vod-progressive.akamaized.net/exp=1579654545~acl=%2A%2F771216520.mp4%2A~hmac=15d015ecde317b2be05797b6cfac7192c05c6e49297312f035f862aeb78af45a/vimeo-prod-skyfire-std-us/01/4242/8/221214113/771216520.mp4?download=1&filename=Pexels+Videos+4098.mp4</li>
+      <li>https://cdn.videvo.net/videvo_files/video/free/2019-05/originalContent/190404_04_KaninBovec_Drone_020.mp4</li>
+      <li>https://cdn.videvo.net/videvo_files/videos/160820_125_NYC_OutOfFocusCarLights5_1080p.mp4</li>
+      <li>https://cdn.videvo.net/videvo_files/videos/OldFashionedFilmLeaderCountdownVidevo.mov</li>
+      <li>https://vod-progressive.akamaized.net/exp=1579648170~acl=%2A%2F1015288581.mp4%2A~hmac=3368e0b72c5e8f8255a9374404508300d11f36001faa840118c881d81107f4ee/vimeo-prod-skyfire-std-us/01/4561/10/272806686/1015288581.mp4?download=1&filename=Pexels+Videos+1128104.mp4</li>
+      <li>https://vod-progressive.akamaized.net/exp=1579647809~acl=%2A%2F840331843.mp4%2A~hmac=0bc29f2ca55beb4c64a7e42909c4be2a12c94974fa93ba98ccf69c4c5e1fc394/vimeo-prod-skyfire-std-us/01/2215/9/236075858/840331843.mp4?download=1&filename=Pexels+Videos+4703.mp4</li>
+      <li>https://vod-progressive.akamaized.net/exp=1579647388~acl=%2A%2F1237770441.mp4%2A~hmac=e988481ec6ca7cb4aa73defb49a5d96eaf3afe91b84b9a789b2b360a5df66918/vimeo-prod-skyfire-std-us/01/3845/12/319226256/1237770441.mp4?download=1&filename=Pexels+Videos+1943483.mp4</li>
+      <li>https://vod-progressive.akamaized.net/exp=1579647297~acl=%2A%2F1436805237.mp4%2A~hmac=388d3813fe83de20aeccc9d22c20558e4a855c855f9e2bcad00f0a8e2ebce529/vimeo-prod-skyfire-std-us/01/711/14/353558999/1436805237.mp4?download=1&filename=Pexels+Videos+2795734.mp4</li>
+      <li>https://vod-progressive.akamaized.net/exp=1579647470~acl=%2A%2F1567516907.mp4%2A~hmac=f2ddd255bb8f1c7585ad5703dee511c49f32a239e58d9338e6c00714c89425a8/vimeo-prod-skyfire-std-us/01/162/15/375810229/1567516907.mp4?download=1&filename=video.mp4</li>
+      <li>https://vod-progressive.akamaized.net/exp=1579647495~acl=%2A%2F1320198902.mp4%2A~hmac=fe4a1f5649ee7b96eb88407ad14f0fe6c8479c14f80bd20240a2804d87f57737/vimeo-prod-skyfire-std-us/01/1868/13/334344435/1320198902.mp4?download=1&filename=Pexels+Videos+2278095.mp4</li>
+      <li>https://vod-progressive.akamaized.net/exp=1579647546~acl=%2A%2F1198270670.mp4%2A~hmac=00fc0f17f2ce03dd3cb62617e8c4a9339b0f12f5ea9b7f5c3a982079936ef403/vimeo-prod-skyfire-std-us/01/2247/12/311235086/1198270670.mp4?download=1&filename=Pexels+Videos+1795798.mp4</li>
+      <li>https://vod-progressive.akamaized.net/exp=1579647609~acl=%2A%2F1315809574.mp4%2A~hmac=d3ac841b04981d5f108520d1d8c630a0a15b713a3bf38cee59599f1fae1fb19d/vimeo-prod-skyfire-std-us/01/1716/13/333584579/1315809574.mp4?download=1&filename=Pexels+Videos+2257258.mp4</li>
+    </ul>
+    <p>
 </div>
-
+</div>
 
 </body>
 </html>
