--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
 <link rel="stylesheet" href="index.css">
 
-    <body>    
+<body>    
+    <video autoplay muted loop id="myVideo">
+        <source src="media/Background98.mp4" type="video/mp4">
+      </video>
+
         <div class="accordion">
             <input type="radio" name="select" class="accordion-select" checked />
             <div class="accordion-title"><h2>Welcome</h2></div>
