--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="accordion-content" id="welcome">
                 <div class="titlecard">
                     <h2>Devin Durham<h2>
-                    <h3>Academic, Engineer, Scientist, Artist</h3>
+                    <h3>Academic, Computer Scientist, Artist</h3>
                 </div>
             </div> 
             
