title change test

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <link rel="stylesheet" href="index.css">
+<title>Devin Durham</title>
 
 <body>    
     <video autoplay muted loop id="myVideo">
         <source src="media/Background98.mp4" type="video/mp4">
       </video>
-
+      <title>Devin Durham</title>
         <div class="accordion">
             <input type="radio" name="select" class="accordion-select" checked />
             <div class="accordion-title"><h2>Welcome</h2></div>
