--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="accordion-content" id="welcome">
                 <div class="titlecard">
                     <h2>Devin Durham<h2>
-                    <h3>Academic, Computer Scientist, Artist</h3>
+                    <h3>Academic, <br>Computer Scientist,<br> Film & Arts Enthusiast,<br> Explorer</h3>
                 </div>
             </div> 
             
