New Projects, Updated Resume

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -14,7 +14,23 @@
 				<br><br><h5>Github: <a href="https://github.com/devlontecron" target="_blank" >DevlonTecron</a></h5>	
 			</div>
 
-		<div class="holidaze">
+			<div>
+				<h3>Website</h3>
+				<p>I Started working on the website in the latter half of the summer of 2016. I think I officially launched somewhere in mid-September with only one static page that simply said "hello world". From there I have developed, from scratch using HTML5, JS, and CSS3, this work in progress personal website. I taught myself the language and how to launch using github and Codecademy. This has personally been my favorite project to work on. Much of the work has been me just struggling / fighting with CSS and trying to get everything just right. I will forever come back to this and update it and continue to work on it over the coming years. My end dream is for this to become a very slick, feature rich, smooth website that incorporate angular and other cutting edge languages. I hope for this to be a one stop destination for employers, researchers, friends and family to discover and explore who I am, what I've done, what I'm going to do, and where I'm heading.  </p>
+				<p>UPDATE March 2019: Complete redesign of the website was done to refresh look and feel along with general information. The UX / UI was also redesigned for a more original style where everything "circles" around different topics. The site also uses newer web technologies to allow for a responsive design.  </p>
+				<p>UPDATE April 2020: Completed redesign using accordion views for more modern look and feel while focusing on touch first design. Also included responsive web design for multiple screen sizes</p>
+			</div>
+
+			<div class="covid19">
+				<h3>MIT COVID19 Hackathon</h3>
+				<img src="../resources/PoolQ.jpg"></a>
+				<p>Participated in a weekend long hackathon put on by MIT to solve the global pandemic that is COVID19. Paired up with a team of data scientists, health professionals, and other SDEs, we developed a proof of concept web application to load balance and distribute testing while intelligently ranking and identifying high risk or heat maps of infected patients. With this, we were able to provide large scale testing by group patients from multiple organizations and regions to batch test and identify hot spots. Used technologies such as AWS Beanstalk, Springboot, and mySql. http://mitcovid-env.eba-kp5pu7vi.us-east-2.elasticbeanstalk.com/ </p>
+				<p>This event re-invigorated my passion for coding and allowed me to demonstrate and prove to myself how much I have learned and grown as a Software Developer in industry, in the last 2 years. From concept to *near* completion, I lead the design and technology use cases to develop a fully, ready to launch, globally scalable web application while consuming data driven metrics and information.</p>
+					
+				
+			</div>
+
+			<div class="holidaze">
 			<h3>Holidaze</h3>
 			<img src="../resources/holidazeSS.jpg"></a>
 			<p>From concept to completion, I smashed through 2 weeks to produce this quick and fun web application to track users and phrases for a family drinking game. Users log in with names and can add new phrases while scoring points by selecting what phrases or events have happened. I build 3 different Azure functions (GET login/validate, GET data, POST Phrases) along with a dynamic web application UI with a mobile first design. This project really proved to myself how quickly I’m able to pick up new tools and apply them when needed while also expanding on my skillset in the new era of cloud development. This also allowed me to compare and contrast Azure with AWS and I have to say I was very impressed with Azure’s ease of use. I would like to come back to this project and replicated it but using AWS Lambda functions. That being said, I do believe that these small cloud functions are the future of software development. I also wrote my functions in Python3, the third project I have chosen to use Python, which has solidified my opinions on the flexible, non-type casting, high level language: Python is great for data scientists and engineers who need a quick little function to run and process data at a local or non-production level environment. Beyond this, this project also reinvigorated my love for coding and demonstrated my passion to leverage my skills to help and build something for others.</p>
@@ -51,13 +67,6 @@
 		<div>
 			<h3>Personal Server</h3>
 			<p>This was a quick side project to set up my personal server to host my website along with other media files. The hardware I'm using is an older HP tower with 4gb of ram and about 500Gb of storage running Ubuntu 18.04.1 server. </p>
-		</div>
-		
-		
-		<div>
-			<h3>Website</h3>
-			<p>I Started working on the website in the latter half of the summer of 2016. I think I officially launched somewhere in mid-September with only one static page that simply said "hello world". From there I have developed, from scratch using HTML5, JS, and CSS3, this work in progress personal website. I taught myself the language and how to launch using github and Codecademy. This has personally been my favorite project to work on. Much of the work has been me just struggling / fighting with CSS and trying to get everything just right. I will forever come back to this and update it and continue to work on it over the coming years. My end dream is for this to become a very slick, feature rich, smooth website that incorporate angular and other cutting edge languages. I hope for this to be a one stop destination for employers, researchers, friends and family to discover and explore who I am, what I've done, what I'm going to do, and where I'm heading.  </p>
-			<p>UPDATE March 2019: Complete redesign of the website was done to refresh look and feel along with general information. The UX / UI was also redesigned for a more original style where everything "circles" around different topics. The site also uses newer web technologies to allow for a responsive design.  </p>
 		</div>
 	
 		<div>
