Updating About page

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -14,9 +14,9 @@
 	<div class="boxed">
 	
 		<div class = "top">
-			<h1>  Devin Joseph Durham</h1>
-			<h3>  Computer Scientist / Academic / Film & Arts Enthusiast / Explorer</h3>
-			<h4> "Empower your colleagues and change the world"</h4>
+			<h1>Devin Joseph Durham</h1>
+			<h3>Academic / Computer Nerd / Film & Arts Enthusiast</h3>
+			<h4>"Empower your colleagues and change the world"</h4>
 			
 		</div>
   
