--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html>
 <link rel="stylesheet" href="index.css">
-<title>Devin Durham</title>
+<title>Devin Joseph Durham</title>
 
 <body>    
     <video autoplay muted loop id="myVideo">
         <source src="media/Background98.mp4" type="video/mp4">
       </video>
-      <title>Devin Durham</title>
+      <title>Devin Joseph Durham</title>
         <div class="accordion">
             <input type="radio" name="select" class="accordion-select" checked />
             <div class="accordion-title"><h2>Welcome</h2></div>
             <div class="accordion-content" id="welcome">
                 <div class="titlecard">
                     <h2>Devin Durham<h2>
-                    <h3>Academic, <br>Computer Scientist,<br> Film & Arts Enthusiast,<br> Explorer</h3>
+                    <h3>Academic, <br>Computer Nerd,<br> Film & Arts Enthusiast,<br> World Traveler</h3>
                 </div>
             </div> 
             
