Updated media tab

--- a/other/condo.html
+++ b/other/condo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<meta http-equiv="refresh" content="0; url=https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__bVk8VhUQzlQSDBGUTRMUFdQVlhDMVJYWFRNQUhPVi4u&embed=true" />
+<meta http-equiv="refresh" content="0; url=https://forms.gle/DL392R7hCPrAfDXL9" />
 
 
 </html>
