--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div> 
 
             <input type="radio" name="select" class="accordion-select" />
-            <div class="accordion-title"><h2>Media & Social</h2></div>
+            <div class="accordion-title"><h2>Media</h2></div>
             <div class="accordion-content">
                 <object data="/media/media.html"></object>
             </div> 
