--- a/media/media.html
+++ b/media/media.html
@@ -7,8 +7,8 @@
 				<h1>Media</h1>				
 			</div>   
             
-            <p>Condo Rental: <a href="../other/condo.html" target="_blank" >DevlonTecron</a></p>
-            <p>Monkeypox Doc: <a href="../other/monkeypox.html" target="_blank" >DevlonTecron</a></p>        
+            <p><a href="../other/condo.html" target="_blank" >Condo Rental Form</a></p>
+            <p><a href="../other/monkeypox.html" target="_blank" >Monkeypox Document</a></p>        
                 
         </div>
     </div>
