--- a/html/resume.html
+++ b/html/resume.html
@@ -33,7 +33,7 @@
 	      
  	</div> 
 <div class = "resumeBox">	
-	     <object data="../media/DevinDurhamResume.pdf"></object>
+	     <object data="../media/DevinDurhamResume.20230206.pdf"></object>
 </div>
 </body>
 </html>
