--- a/contact/contact.html
+++ b/contact/contact.html
@@ -24,7 +24,7 @@
 <table>
     <tr>
         <td>Resume: </td>
-        <td> <a href="../resources/DevinDurhamResume.May.2020.pdf" target="_blank"> Last updated: May 2020 </a></td>
+        <td> <a href="../media/DevinDurhamResume.20230206.pdf" target="_blank"> Last updated: February 2023 </a></td>
       </tr>
   <tr>
     <td>Email: </td>
