Removing Condo Link

--- a/media/media.html
+++ b/media/media.html
@@ -9,7 +9,7 @@
             <div class="subjects">            
                 <div class="Links">
                     <h2>Quick Links</h2>
-                    <p><a href="../other/condo.html" target="_blank" >Condo Rental Form</a></p>   
+                    <!-- <p><a href="../other/condo.html" target="_blank" >Condo Rental Form</a></p>    -->
                 </div>
 
                 <div class="Photos">
