TagLine and Resume update

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -24,7 +24,7 @@
 <table>
     <tr>
         <td>Resume: </td>
-        <td> <a href="../media/DevinDurhamResume.20230206.pdf" target="_blank"> Last updated: February 2023 </a></td>
+        <td> <a href="../media/DevinDurhamResume.20240725.pdf" target="_blank"> Last updated: July 2024 </a></td>
       </tr>
   <tr>
     <td>Email: </td>
@@ -32,19 +32,15 @@
   </tr>
   <tr>
     <td>LinkedIn: </td>
-    <td> <a href="https://www.linkedin.com/in/devlontecron" target="_blank"> Devin Durham </a></td>
-  </tr>
-  <tr>
-    <td>Twitter:  </td>
-    <td> <a href="https://twitter.com/DevlonTecron" target="_blank"> DevlonTecron</a></td>
+    <td> <a href="https://www.linkedin.com/in/devlontechron" target="_blank"> Devin Durham </a></td>
   </tr>
   <tr>
     <td>Github:</td>
-    <td> <a href="https://github.com/devlontecron" target="_blank"> DevlonTecron</a></td>
+    <td> <a href="https://github.com/devlontechron" target="_blank"> DevlonTecron</a></td>
   </tr>
   <tr>
     <td>Instagram:   </td>
-    <td> <a href="https://www.instagram.com/devlontecron/" target="_blank"> DevlonTecron</a></td>
+    <td> <a href="https://www.instagram.com/devlontechron/" target="_blank"> DevlonTechron</a></td>
   </tr>
 	
 </table>
