--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="accordion-content" id="welcome">
                 <div class="titlecard">
                     <h2>Devin Joseph Durham<h2>
-                    <h3>Academic, <br>Computer Nerd,<br> Film & Arts Enthusiast,<br> Traveler</h3>
+                    <h3>Empathy<br>Communication<br>Education</h3>
                 </div>
             </div> 
             
