--- a/media/media.html
+++ b/media/media.html
@@ -15,6 +15,7 @@
                 <div class="Photos">
                     <h2>Photos</h2>
                     <p><a href="https://photos.app.goo.gl/DFCDzve68zqYNRxD8" target="_blank" >Italian Wedding Soup</a></p> 
+                    <p> Instagram <a href="https://www.instagram.com/devlontechron/" target="_blank"> DevlonTechron</a></p>                    
                 </div>
 
                 <div class="Videos">
