--- a/contact/contact.html
+++ b/contact/contact.html
@@ -24,7 +24,7 @@
 <table>
     <tr>
         <td>Resume: </td>
-        <td> <a href="../media/DevinDurhamResume.20250115.pdf" target="_blank"> Last updated: July 2024 </a></td>
+        <td> <a href="../resources/DevinDurhamResume.20250115.pdf" target="_blank"> Last updated: January 2025 </a></td>
       </tr>
   <tr>
     <td>Email: </td>
@@ -36,7 +36,7 @@
   </tr>
   <tr>
     <td>Github:</td>
-    <td> <a href="https://github.com/devlontechron" target="_blank"> DevlonTecron</a></td>
+    <td> <a href="https://github.com/devlontechron" target="_blank"> DevlonTechron</a></td>
   </tr>
   <tr>
     <td>Instagram:   </td>
