--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <body>    
     <video autoplay muted loop id="myVideo">
-        <source src="media/Background98.mp4" type="video/mp4">
+        <source src="resources/Background98.mp4" type="video/mp4">
       </video>
       <title>Devin Joseph Durham</title>
         <div class="accordion">
