--- a/media/media.html
+++ b/media/media.html
@@ -14,8 +14,7 @@
 
                 <div class="Photos">
                     <h2>Photos</h2>
-                    <p><a href="https://photos.app.goo.gl/DFCDzve68zqYNRxD8" target="_blank" >Italian Wedding Soup</a></p> 
-                    <p> Instagram <a href="https://www.instagram.com/devlontechron/" target="_blank"> DevlonTechron</a></p>                    
+                    <p> Instagram: <a href="https://www.instagram.com/devlontechron/" target="_blank"> DevlonTechron</a></p>                    
                 </div>
 
                 <div class="Videos">
@@ -25,6 +24,7 @@
 
                 <div class="Music">
                     <h2>Music</h2>
+                    <p>Spotify: <a href="https://open.spotify.com/user/devlontecron" target="_blank"> DevlonTechron</p>
                     
                 </div>
 
