--- a/projects/projects.html
+++ b/projects/projects.html
@@ -11,12 +11,12 @@
 
 			<div class="title">
 				<h1>Projects</h1>
-				<br><br><h5>Github: <a href="https://github.com/devlontecron" target="_blank" >DevlonTecron</a></h5>	
+				<br><br><h5>Github: <a href="https://github.com/devlontechron" target="_blank" >DevlonTechron</a></h5>	
 			</div>
 
 			<div>
 				<h3>E-Ink Picture Frame</h3>
-				<p>Home made digital picture frame project using an raspberry-pi and and E-Ink digital screen, I wanted to develop something where i could see and potentially share my digital photos but not be bothered by yet another glowing screen. E-ink perfectly fits this use case and required me to to do some real low level (C++) coding. Written in python, C++, and calling public API's such as Wikipedia PotD, and my own Google Photos, I was able to develop a working prototype that provides a new image every day. Many expansions are planned for this project including sharing, and widgets.</p>
+				<p>Home made digital picture frame project using an raspberry-pi and and E-Ink digital screen, I wanted to develop something where I could see and potentially share my digital photos but not be bothered by yet another glowing screen. E-ink perfectly fits this use case and required me to to do some real low level (C++) coding. Written in python, C++, and calling public API's such as Wikipedia PotD, and my own Google Photos, I was able to develop a working prototype that provides a new image every day. Many expansions are planned for this project including sharing, and widgets.</p>
 			</div>
 
 			<div>
