--- a/about/about.html
+++ b/about/about.html
@@ -20,7 +20,7 @@
                     Currently living in New York, I've set out on, yet again, redefining my path and life. The last 10 years in industry has somewhat soured my perspective on Tech and its positive impact on society while also forcing me to wrestle with questions about what I want out of life. Education and Art as a way of helping others to think has always been a center piece for me. An appreciation for health and fitness has helped me 'get out of bed in the morning' to be thankful for what I have now and how I got here. Living in the greatest city in the world also makes it hard to squander the day away. 
                 </p>
                 <p>
-                    I can only blame Mike, my local barber, here in the East Village, who asked my on my first visit and first week in New York, *"So whats your Flex? If you could 'Flex' on anything about you, what would it be?"*. I told him thats a great question and wanted to think it over. I sat there in silence when Mike finished my haircut and as I got up to pay and leave I told him my answer: *"My 'Flex' is, I got everything I ever wanted, dreamed of, and hoped for in my life. All before the age of 30."* Mike: "Oh. Oh *Wow.*".
+                    I can only blame Mike, my local barber, here in the East Village, who asked my on my first visit and first week in New York, "So whats your Flex? If you could 'Flex' on anything about you, what would it be?". I told him thats a great question and wanted to think it over. I sat there in silence when Mike finished my haircut and as I got up to pay and leave I told him my answer: "My 'Flex' is, I got everything I ever wanted, dreamed of, and hoped for in my life. All before the age of 30." Mike: "Oh. Oh Wow.".
                 </p>
         </div>
         <div class='future'>
@@ -31,7 +31,7 @@
                 </p>
             </br>
                 <p>
-                    Because I believe that once we collectively start talking about our ambitions, our faults, and our ideas, and out dreams, thats when we begin to empower each other and thats how we change the world.
+                    Because I believe that once we collectively start talking about our ambitions, our faults, and our ideas, and our dreams, thats when we begin to empower each other and thats how we change the world.
                 </p>            
 
         </div>
