30 Years Old Speech

--- a/media/media.html
+++ b/media/media.html
@@ -32,7 +32,7 @@
                     <h2>Writing</h2>
                     <p><a href="/media/writing/SoYouGotUp.md" target="_blank" >"So You Got Up..."</a></p>
                     <p><a href="/media/writing/Introduction.md" target="_blank" >"Allow Me To Introduce Myself"</a></p>
-
+                    <p><a href="/media/writing/30YearsSpeech.txt" target="_blank" >"30 Years Old Speech"</a></p>
                 </div>
             </div>  
                 
